Restrict the candidates property names for Environment Variables matching (#1466)